[package]
authors = ["Kristoffer Ström <kristoffer@rymdkoloni.se>"]
description = "Simple arena allocator"
documentation = "https://docs.rs/trove"
license = "MIT OR Apache-2.0"
name = "trove"
repository = "https://github.com/krl/trove"
version = "1.0.1"

[dependencies]
either = "1.5.0"
vec_map = "0.8.1"
